--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startweb": "./node_modules/.bin/webpack-dev-server"
+    "startweb": "./node_modules/.bin/webpack-dev-server",
+    "start" : "node server.js"
   },
   "author": "",
   "license": "ISC",
