--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startweb": "./node_modules/.bin/webpack-dev-server",
+    "watch": "webpack -w",
     "start": "node server.js"
   },
   "author": "",
