--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-promise": "^3.5.0",
@@ -27,6 +29,7 @@
     "inert": "^4.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "style-loader": "^0.16.1",
     "vision": "^4.1.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
