--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "lint": "eslint ./ --cache --ignore-pattern .gitignore",
     "watch": "webpack -w",
-    "start": "node server.js",
-    "test": "echo \"Error: I SHOULD FAIL LOLOLOLOLOL \" && exit 1"
+    "start": "node server.js"
   },
-  "pre-commit": ["lint","test"],
+  "pre-commit": [
+    "lint"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -30,9 +31,14 @@
     "pre-commit": "^1.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.3.2",
     "style-loader": "^0.16.1",
     "vision": "^4.1.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "react-redux": "^5.0.3"
   }
 }
