--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Alaa&Ghada",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint ./ --cache --ignore-pattern .gitignore",
     "watch": "webpack -w",
     "start": "node server.js"
@@ -17,6 +19,7 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
@@ -28,6 +31,7 @@
     "handlebars": "^4.0.6",
     "hapi": "^16.1.1",
     "inert": "^4.2.0",
+    "jest": "^19.0.2",
     "pre-commit": "^1.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
