--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^15.4.2",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
+    "sqlite3": "^3.1.8",
     "style-loader": "^0.16.1",
     "vision": "^4.1.1",
     "webpack": "^2.3.3",
