--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hapi": "^16.1.1",
     "inert": "^4.2.0",
     "jest": "^19.0.2",
+    "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
