--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "webpack -w",
     "watch:server": "nodemon -x 'npm start'",
     "start": "node server.js",
-    "build" : "webpack"
+    "build": "webpack"
   },
   "pre-commit": [
     "lint"
@@ -26,17 +26,20 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^7.1.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.1.1",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.1",
+    "ignore-styles": "^5.0.1",
     "inert": "^4.2.0",
     "jest": "^19.0.2",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.4.2",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
